// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The RadioButtons widget renders correctly with default configuration 1`] = `
<DocumentFragment>
  <div
    class="widget-radio-buttons"
    data-mendix-radio-group="true"
    id="widget-radio-buttons-radio-buttons-test"
    role="radiogroup"
  >
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-label="first-option"
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-0"
        tabindex="-1"
        type="radio"
        value="0"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-0"
      >
        first-option
      </label>
    </div>
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-label="second-option"
        checked=""
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-1"
        tabindex="0"
        type="radio"
        value="1"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-1"
      >
        second-option
      </label>
    </div>
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-label="third-option"
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-2"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-2"
      >
        third-option
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The RadioButtons widget renders correctly with horizontal orientation 1`] = `
<DocumentFragment>
  <div
    class="widget-radio-buttons inline"
    data-mendix-radio-group="true"
    id="widget-radio-buttons-radio-buttons-test"
    role="radiogroup"
  >
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-label="first-option"
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-0"
        tabindex="-1"
        type="radio"
        value="0"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-0"
      >
        first-option
      </label>
    </div>
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-label="second-option"
        checked=""
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-1"
        tabindex="0"
        type="radio"
        value="1"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-1"
      >
        second-option
      </label>
    </div>
    <div
      class="radio"
      data-mendix-radio="true"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-label="third-option"
        data-mendix-radio-focus="false"
        data-radio-input="true"
        id="widget-radio-buttons-radio-buttons-test-radio-2"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <label
        for="widget-radio-buttons-radio-buttons-test-radio-2"
      >
        third-option
      </label>
    </div>
  </div>
</DocumentFragment>
`;
